tests/ui/async-await/drop-order/drop-order-locals-are-hidden.stderr
error[E0425]: cannot find value `__arg1` in this scope
  --> $DIR/drop-order-locals-are-hidden.rs:4:16
   |
LL |     assert_eq!(__arg1, (1, 2, 3));
   |                ^^^^^^ not found in this scope

error[E0425]: cannot find value `__arg2` in this scope
  --> $DIR/drop-order-locals-are-hidden.rs:5:16
   |
LL |     assert_eq!(__arg2, 4);
   |                ^^^^^^ not found in this scope

error[E0425]: cannot find value `__arg0` in this scope
  --> $DIR/drop-order-locals-are-hidden.rs:9:16
   |
LL |     assert_eq!(__arg0, 1);
   |                ^^^^^^ not found in this scope

error[E0425]: cannot find value `__arg1` in this scope
  --> $DIR/drop-order-locals-are-hidden.rs:10:16
   |
LL |     assert_eq!(__arg1, 2);
   |                ^^^^^^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.
